spade-tests/src/snapshots/spade_tests__linear_check__unused_transitive_tuple_member_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(resource: ((~& bool, &bool), &bool)) -> bool {
    true
}


error: resource#0#0 is unused
  ┌─ testinput:1:10
  │
1 │ entity x(resource: ((~& bool, &bool), &bool)) -> bool {
  │          ^^^^^^^^ resource#0#0 is unused
  │
  = note: resource#0#0 is a ~& value which must be set
